Desktop mode on mobile fixed

--- a/src/components/Extra/styles.module.css
+++ b/src/components/Extra/styles.module.css
@@ -1,4 +1,4 @@
-/* .extraWrapper {
+.extraWrapper {
   width: 100%;
   max-width: 1140px;
   margin: 0 auto 10rem;
@@ -33,4 +33,4 @@
   .extraWrapper {
     margin: 0 auto 40vw;
   }
-} */
+}
